k8s/saemate/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saemate-web
  namespace: saemate
spec:
  selector:
    app: saemate-web
  ports:
    - port: 3000
      targetPort: 3000
