k8s/saemate/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saemate-web
  namespace: saemate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - saemate.json-server.win
      secretName: saemate-web-tls
  rules:
    - host: saemate.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saemate-web
                port:
                  number: 3000
